--- a/package.json
+++ b/package.json
@@ -3,8 +3,30 @@
   "version": "1.0.0",
   "description": "Timer/React",
   "main": "script.js",
+  "dependencies": {
+    "autoprefixer-cli": "^1.0.0",
+    "browser-sync": "^2.22.0",
+    "glob-run": "^0.1.6",
+    "node-sass": "^4.7.2",
+    "nu-html-checker": "^0.1.0",
+    "onchange": "^3.3.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npm run test:html",
+    "test:html": "glob-run nu-html-checker *.html",
+    "init-project": "npm run init:dirs && npm run init:files && npm run init:gitignore && npm run init:npm-install",
+    "init:dirs": "mkdir -p sass css vendor images js",
+    "init:files": "touch README.md index.html sass/style.scss js/script.js",
+    "init:gitignore": "curl https://raw.githubusercontent.com/github/gitignore/master/Node.gitignore -o .gitignore",
+    "init:npm-install": "npm install",
+    "build": "npm run build:sass && npm run build:autoprefixer && npm run test",
+    "build:sass": "node-sass --output-style compact --source-map true -o css sass",
+    "build:sass:dev": "node-sass --output-style expanded --source-map true -o css sass",
+    "build:autoprefixer": "autoprefixer-cli css/style.css",
+    "watch": "parallelshell \"npm run watch:sass\" \"npm run watch:autoprefixer\" \"npm run watch:browser-sync\"",
+    "watch:sass": "node-sass --output-style expanded --source-map true -o css sass --watch",
+    "watch:autoprefixer": "onchange -d 100 css/style.css -- autoprefixer-cli -o css/style.prefixed.css css/style.css",
+    "watch:browser-sync": "node_modules/.bin/browser-sync start --server --files \"css/*.css\" \"*.html\" ",
     "start": "babel script.js --watch --out-file script-compiled.js",
     "server": "http-server"
   },
@@ -18,11 +40,13 @@
     "url": "https://github.com/ParanAndro/javascr-ES6-15.7-timer-React/issues"
   },
   "homepage": "https://github.com/ParanAndro/javascr-ES6-15.7-timer-React#readme",
+   
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.6.1",
-    "http-server": "^0.11.1"
+    "http-server": "^0.11.1",
+    "parallelshell": "^3.0.2"
   }
 }
